<resources>
    <string name="app_name">Darts Score</string>

    <string name="txt_btn_new_game">New Game</string>
    <string name="txt_btn_history">History</string>
    <string name="txt_btn_rules">Rules</string>
    <string name="txt_author_credits">Mauro Victor @2023</string>

    <!-- Configuration Screen -->
    <string name="screen_name_config">Game Settings</string>
    <string name="txt_tv_name_player_A">Player A</string>
    <string name="txt_tv_name_player_B">Player B</string>

    <string name="txt_tv_label_num_start_points">Initial Number of Points:</string>
    <string name="txt_btn_start_game">Start</string>
    <string name="txt_darts_per_round">Darts per Round</string>
    <string name="txt_darts_per_round_init_value">3</string>
    <string name="date_format_code">MM-dd-yyyy</string>

    <!-- Text for card -->
    <string name="img_description">Image of a red dart</string>
    <!-- Card text format -->
    <string name="txt_format_vs_players">%1$s VS %2$s</string>
    <string name="txt_winner_message">%1$s won by %2$s points.</string>
    <string name="txt_scores_description_value">The initial number of points in this game was %1$s</string>

    <!-- Text fro score screen -->
    <string name="txt_title_score_screen">Score</string>
    <string name="txt_label_plauer_turn">Player %1$s Turn</string>
    <string name="txt_label_scores_turn">Points in this round</string>
    <string name="txt_edit_score_label">0</string>
    <string name="btn_txt_add_score">Add Points</string>
    <string name="btn_txt_backScore">Go Back to Last Move</string>
    <string name="btn_txt_saveGame">Save Game</string>
    <string name="img_btn_home_content_desc">Image of a home</string>
    <string name="img_btn_trash_content_desc">Image of a trash can</string>


    <!-- Rules screen : -->
    <string name="txt_title_rules_screen">Rules</string>
    <string name="txt_darts_game_rules">
        <b>Darts Game Rules</b>\n\n
        1. The game is played on a dartboard, with numbered areas from 1 to 20.\n\n
        2. The objective is to score points by throwing darts at the board.\n\n
        3. Each player has a limited number of darts per round.\n\n
        4. Players earn points based on the area of the board where the dart lands.\n\n
        5. The player must either reach a specific score or hit zero points to win.\n\n
        6. There are bonus areas, such as the "bullseye," which are worth more points.\n\n
        7. Scores accumulate over the game until a player emerges as the winner.\n\n
        Enjoy playing darts!
    </string>



</resources>