<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreScreen">


    <TextView
        android:id="@+id/tvScoreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_title_score_screen"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAddScore"
        android:layout_width="249dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:text="@string/btn_txt_add_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etScoreInputValue" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/tvScoreTitle"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tvNamePlayerB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="12dp"
            android:text="Player B"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tvPlayerBScores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="viewEnd"
            android:textSize="42sp" />

        <TextView
            android:id="@+id/tvPlayerBTurnNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="TextView"
            android:textAlignment="viewEnd"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvPlayerBLastPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="TextView"
            android:textAlignment="viewEnd"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/playerAData"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvScoreTitle"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tvNamePlayerA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="Player A"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvPlayerAScores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="42sp" />

        <TextView
            android:id="@+id/tvPlayerATurnNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="TextView"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvPlayerALastPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="TextView"
            android:textSize="22sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnBackScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/btn_txt_backScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddScore" />

    <EditText
        android:id="@+id/etScoreInputValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:ems="10"
        android:text="@string/txt_edit_score_label"
        android:textAlignment="center"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerAData" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_label_scores_turn"
        app:layout_constraintBottom_toTopOf="@+id/etScoreInputValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTurnPlayerLabel"
        app:layout_constraintVertical_bias="0.804" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <ImageButton
        android:id="@+id/imgBtnBackHome"
        style="@style/IconAppStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/img_btn_home_content_desc"
        app:layout_constraintBottom_toTopOf="@+id/playerAData"
        app:layout_constraintEnd_toStartOf="@+id/tvScoreTitle"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_home" />

    <ImageButton
        android:id="@+id/imgBtnTrash"
        style="@style/IconAppStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/img_btn_trash_content_desc"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toEndOf="@+id/tvScoreTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372"
        app:srcCompat="@drawable/ic_trash" />

    <Button
        android:id="@+id/btnSaveGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_saveGame"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBackScore" />

    <TextView
        android:id="@+id/tvTurnPlayerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>